[gd_scene load_steps=2 format=3 uid="uid://cam8swykaip38"]

[ext_resource type="Script" uid="uid://b51k5bi5v7ea8" path="res://scripts/ui.gd" id="1_nt7q6"]

[node name="UI" type="CanvasLayer"]
script = ExtResource("1_nt7q6")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -8.0
offset_right = 8.0
grow_vertical = 0

[node name="Button" type="Button" parent="HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Inventory"

[node name="HBoxContainer2" type="HBoxContainer" parent="."]
offset_right = 128.0
offset_bottom = 40.0

[node name="ProgressBar" type="ProgressBar" parent="HBoxContainer2"]
custom_minimum_size = Vector2(60, 0)
layout_mode = 2
size_flags_horizontal = 6
size_flags_vertical = 4
value = 100.0

[node name="HBoxContainer3" type="HBoxContainer" parent="."]
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -40.0
offset_top = -40.0
grow_horizontal = 0
grow_vertical = 0

[node name="StartWaveButton" type="Button" parent="HBoxContainer3"]
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "Start Wave"

[node name="EnemiesLeftLabel" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -20.0
offset_right = 20.0
offset_bottom = 23.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 20
text = "Enemies Left: 0"

[connection signal="ready" from="." to="." method="_on_ready"]
[connection signal="pressed" from="HBoxContainer/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="HBoxContainer3/StartWaveButton" to="." method="_on_start_wave_button_pressed"]
